--- a/_posts/2021-1-1-Hello_2021.md
+++ b/_posts/2021-1-1-Hello_2021.md
@@ -18,4 +18,60 @@ Most of the big events of the year were related to the job hunting - every inter
 A significant project was a simulation, in which I spent extra hours to build a solid model, but at the end, I realized the key takeaway from this simulation wasn' t a model but understanding more about different stakeholders in a business.
 
 ## This is what my last year was about ##
+
 ### personal life and family ###
+Physically, I got infected by Covid 19 like many of my classmates but luckily I didn't even have fever. Psychologically, I sustained losses of interpersonal contact and worries caused by the pandemic.
+ 
+But everything related to my family was fine. I still remember how worried I was about the risks of being infected for my family, particularly my grandma, but they were shed from this risk thanks to the fact that they were not living in Wuhan and the measures taken were super strict by the government.
+
+### work, studies, profession ###
+It seems everything was on track: for myself, COVID 19 hit my career as it did for many victims.
+
+My studies in the first half of the year were missing because I wasn't in the mood. But I did enjoy the second half - much better than in the first year.
+
+### belongings (home, objects) ###
+I still lived in the same apartment but I got some new objects:
+
+* Ipad and Iphone: both were gifts from my husband for replacing the old ones.
+* Kindle: I hesitated for longtime because the old one was still working but very slowly. Finally I decided to buy it because I wanted to incite my interest of reading.
+* Xiaomi fitbond: a best quality-price purchase of the year
+* Aukey air-buds: another best quality-price purchase of the year
+
+Apps & Softwares 
+* notes-taking & PDF reader *
+* Liquid text (ipad): very "liquid" PDF reader compared to Marginnotes, but it doesn's work well for all the types of PDF.
+* Noteshelf (ipad): it replaced Onenote to take notes.
+* Evernote (ipad): it is only used to scan my handwriting journals.
+* Mubu (MAC): I bought a subscription plan of 3 years and still used it to take down bullet points.
+* Simplenotes (MAC): a simple notes-taking app from desktop 
+
+* database *
+* Notion: I used it heavily for a while but finally I came back to specialized notes-taking apps and Airtable for database. 
+* Airtable: a wonderful database app for recording personal issues, network, CRM etc. 
+
+* productivity *
+* Ticktick: it is powerful because it combines "to-do-list" and "Pomodoro". I bought a premium account for reviewing my data but it wasn' t a necessity.
+
+* Dictionaries *
+* EuDic: I bought a premium account to synchronize the record of vocabulary hacks - and again, it isn't necessary.
+* Frenchhelper:  I bought a premium account to unlock the look-up function but until now, I rarely use it (because I read French so rarely).
+
+* Meditation *
+* Petit Bamboo: three-month subscription, a gift from my husband to push me to resume the meditation. I will swich to Headspace because it was so tempting to fall asleep to listen to the guide in French on Petit Bamboo.
+
+### relaxation, hobbies, creativity ###
+* Travel: as said in previous question 
+* film & series: I watched 50 films and series this year on Prime Video, Netflix and piracy websites.
+
+### friends, community ###
+I made no new super close friends and community this year. But I catched up more with old friends this year (thanks to COVID 19).
+A surprise was my peer coach for a class since September, with whom I shared some similarities cuturally and interpersonally.
+
+### health, fitness ###
+I had around 120 workouts this year: jogging (90) and Insanity (30) for around 9 months. I didn't do sports in Jan because I got burnt, neither in March and April during the lockdown.
+
+### ###
+
+### ###
+
+### ###
